[tool.poetry]
name = "response-able-lending"
version = "0.1.0"
description = ""
authors = ["Miles Pearce <milespearce95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.0.0"
transformers = "^4.26.0"
pandas = "^1.5.0"
numpy = "^1.22.0"
gradio = "^3.20.0"
scikit-learn = "^1.0.0"
matplotlib = "^3.5.0"
seaborn = "^0.12.0"
datasets = "^3.3.2"
accelerate = "^1.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
